# entropyhunt

./: .gitignore  .vercelignore  BUIDL_DETAILS.md  BUIDL_PROFILE.md  COMPLIANCE_AUDIT.md  LICENSE-APACHE  LICENSE-MIT  README.md  VERIFIED_FACTS.md  critic.md  demo.sh  entropy_hunt.md  entropy_hunt_mockup.html  entropy_hunt_ui.test.mjs  entropy_hunt_v2.html  final_map.html  final_map.json  main.py  package.json  pyproject.toml  requirements.txt  setup.sh  test-final-map.json  test-full-duration-map.json  tmux-bg.sh  tmux-demo.sh  tsconfig.json  tui-demo.sh  vercel.json
.github/workflows/: ci.yml
.omx/: metrics.json  notepad.md  tmux-hook.json
.omx/context/: codebase-discovery-20260404T052959Z.md  codebase-purpose-audit-20260404T053043Z.md  discover-codebase-20260404T053052Z.md
.omx/logs/: notify-fallback-2026-04-04.jsonl  omx-2026-04-04.jsonl  team-dispatch-2026-04-04.jsonl  tmux-hook-2026-04-04.jsonl  turns-2026-04-04.jsonl
.omx/state/: auto-nudge-state.json  hud-state.json  leader-runtime-activity.json  notify-fallback-authority-owner.json  notify-fallback-state.json  notify-fallback.pid  notify-hook-state.json  session.json  skill-active-state.json  team-leader-nudge.json  team-state.json  tmux-hook-state.json  update-check.json
.omx/state/sessions/omx-1775280502017-qe342x/: AGENTS.md  deep-interview-state.json
.omx/state/team/read-fully-entropy-hunt-md-ent/: config.json  manifest.v2.json  monitor-snapshot.json  phase.json  worker-agents.md
auction/: __init__.py  protocol.py  voronoi.py
core/: __init__.py  bft.py  bridge.py  certainty.py  certainty_map.py  consensus.py  heartbeat.py  mesh.py  mqtt_stubs.pyi  selector.py  vertex_bridge.py  zone_selector.py
dashboard/: __init__.py  tui.py  tui_heatmap.ts  tui_layout_engine.ts  tui_monitor.py  tui_monitor.ts  tui_monitor_animations.ts  tui_monitor_aux.ts  tui_monitor_boot.ts  tui_monitor_charts.ts  tui_monitor_chrome.ts  tui_monitor_controller.ts  tui_monitor_focus.ts  tui_monitor_frame.test.ts  tui_monitor_frame_support.ts  tui_monitor_heatmap.ts  tui_monitor_input.ts  tui_monitor_interactions.ts  tui_monitor_io.ts  tui_monitor_layout.ts  tui_monitor_logic.test.ts  tui_monitor_model.ts  tui_monitor_panels.ts  tui_monitor_presenters.ts  tui_monitor_renderables.ts  tui_monitor_runtime.ts  tui_monitor_scene.ts  tui_monitor_shutdown.ts  tui_monitor_sidebar.ts  tui_monitor_stats.ts  tui_monitor_sync.ts  tui_monitor_tick.ts  tui_monitor_v2.ts  tui_opentui_interaction.test.ts  tui_sidebar.ts  tui_theme.ts  tui_types.ts
dashboard/__fixtures__/: LAYOUT_AUDIT.md  tui_monitor_compact.txt  tui_monitor_config.txt  tui_monitor_graphs.txt  tui_monitor_map.txt  tui_monitor_wide.txt
docs/: frontend-qa-checklist.md  vercel-deploy.md
failure/: __init__.py  injector.py  network_injector.py
frontend/: console_source.html  index.html  index.template.html  package.json  tsconfig.json  tui_preview.html  vite.config.ts
frontend/assets/: shell.css
frontend/src/: App.tsx  main.tsx
frontend/src/components/console/: ConsoleFooter.tsx  ConsoleHeader.tsx  ConsoleKVBar.tsx  Controls.tsx  DroneRoster.tsx  EventLog.tsx  GridCanvas.tsx  LivePanels.tsx  Toast.tsx
frontend/src/components/live/: ConsensusPanel.tsx  DroneCards.tsx  EventLog.tsx  FailureTimeline.tsx  GridCanvas.tsx  KPIBar.tsx  MeshTopology.tsx  StatusBar.tsx  SystemMetrics.tsx
frontend/src/components/ui/: Badge.module.css  (+9 more)
frontend/src/data/: landingData.ts
frontend/src/hooks/: useConsoleEngine.ts  useSSE.ts
frontend/src/lib/: liveUtils.ts
frontend/src/pages/: ConsolePage.module.css  ConsolePage.tsx  LandingPage.module.css  LandingPage.tsx  LivePage.tsx
frontend/src/styles/: console.module.css  live.module.css  theme.css
frontend/src/types/: console.ts  live.ts
roles/: __init__.py  claimer.py  drone.py  searcher.py
ros2_ws/src/entropy_hunt_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/entropy_hunt_interfaces/msg/: Assignment.msg  CertaintyUpdate.msg  Claim.msg  ConsensusRoundResult.msg  DroneState.msg  Heartbeat.msg  RuntimeControl.msg  SurvivorFound.msg
ros2_ws/src/entropy_hunt_ros2/: package.xml  setup.py
ros2_ws/src/entropy_hunt_ros2/entropy_hunt_ros2/: __init__.py  drone_node.py  operator_node.py  operator_server.py  operator_state.py  parameters.py  qos.py  ros_mesh.py  snapshot_builder.py  topic_names.py
ros2_ws/src/entropy_hunt_ros2/launch/: demo.launch.py  swarm.launch.py
runtime/: clean.ts  config.ts  health.test.ts  health.ts  hunt-monitor.sh  hunt.sh  ports.ts  processes.ts  run.ts  session.ts
scripts/: __init__.py  build_frontend.py  capture_screenshots.js  demo_smoke.sh  demo_vertex_handshake.py  generate_tui_html.py  ros2_control_smoke_docker.sh  ros2_phase3_validate.sh  ros2_phase3_validate_docker.sh  run_demo.sh  run_foxmq_cluster.py  run_local_peers.py  serve_live_runtime.py  setup_foxmq.py  start_foxmq_cluster.sh  verify_poc.py
simulation/: __init__.py  base_config.py  claim_manager.py  export.py  mesh_handler.py  peer_config.py  peer_protocol.py  peer_runtime.py  proof.py  protocol.py  runtime.py  scheduler.py  stub.py  webots_bridge.py  webots_controller.py  webots_runtime.py  webots_stubs.py
tests/: entropy_hunt_ui.test.mjs  test_bft.py  test_certainty_map.py  test_deployment_config.py  test_failure.py  test_foxmq_transport.py  test_frontend_build.py  test_heatmap.py  test_live_runtime_control.py  test_live_runtime_server.py  test_main_cli.py  test_mesh_transport.py  test_peer_protocol.py  test_peer_runtime.py  test_peer_runtime_control.py  test_repo_hygiene.py  test_run_local_peers.py  test_simulation.py  test_voronoi.py  test_webots_controller.py  test_webots_runtime.py
tests_ros/: conftest.py  test_drone_claim_flow.py  test_operator_snapshot.py  test_ros_package_layout.py  test_runtime_imports.py  test_snapshot_builder.py  test_topic_contract.py  test_topic_contract_extended.py
vertex-node/: Cargo.toml
vertex-node/src/: lib.rs  main.rs
viz/: __init__.py  heatmap.py
webots_world/: README.md  entropy_hunt.wbt
webots_world/controllers/entropy_hunt_webots_supervisor/: entropy_hunt_webots_supervisor.py
(+39 files in other folders)
