[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-hunt"
version = "0.1.0"
description = "Deterministic entropy-driven swarm search simulation"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
files = ["auction", "core", "failure", "roles", "scripts", "simulation", "viz", "main.py", "tests"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
explicit_package_bases = true
mypy_path = ["ros2_ws/src/entropy_hunt_ros2"]

[[tool.mypy.overrides]]
module = [
    "entropy_hunt_interfaces",
    "entropy_hunt_interfaces.*",
    "launch",
    "launch.*",
    "launch_ros",
    "launch_ros.*",
    "rclpy",
    "rclpy.*",
    "setuptools",
    "setuptools.*",
]
ignore_missing_imports = true
