[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "entropy-hunt"
version = "0.1.0"
description = "Deterministic entropy-driven swarm search simulation"
requires-python = ">=3.12"
dependencies = []  # GAPS-4.4: Core is stdlib-only; optional deps below

[project.optional-dependencies]
foxmq = ["paho-mqtt>=2.0.0"]  # WARNING-3.5: Pin v2 API, remove v1 fallback
dev = ["pytest>=9", "pytest-cov>=6", "pytest-xdist>=3", "pytest-timeout>=2", "ruff>=0.15", "mypy>=1.20.2"]

# 6.2 fix: Proper PEP 621 entry point in [project.scripts] instead of
# setuptools-specific [tool.setuptools] scripts section.
[project.scripts]
entropy-hunt = "main:main"

[tool.setuptools.packages.find]
include = ["auction*", "core*", "dashboard*", "failure*", "roles*", "scripts*", "simulation*", "viz*"]
exclude = ["tests*", "tests_ros*", "ros2_ws*", "node_modules*", "frontend*", "runtime*", "vertex-node*", "dist*", "foxmq.d*", "infodocs*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-n auto"
markers = ["integration: real-broker integration tests (require mosquitto)"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
    "S",    # bandit security
    "T20",  # flake8-print
    "PTH",  # use pathlib
    "PLR",  # pylint refactor
    "PLC",  # pylint convention
]
ignore = [
    "D",       # pydocstyle — all docstrings intentionally removed
    "S101",    # assert in tests
    "PLR2004", # magic values in tests
    "T201",    # print in scripts/verify
    "PTH123",  # open() in scripts
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "SLF001", "ARG005", "ARG002", "ANN", "RUF059", "PLC0415", "TRY003", "EM101", "EM102", "S306", "PT017", "ARG001", "N802", "S603", "C901", "PLR0913", "S310", "S311", "E402", "D", "T201", "E501", "B905", "PLR2004", "F841", "BLE001", "LOG015", "PLW0603", "FBT003", "EXE001", "PTH123", "PLW2901"]
"tests_ros/**" = ["S101", "PLR2004", "SLF001", "ARG005", "ARG002", "ANN", "RUF059", "PLC0415", "Q000", "TRY003", "EM101", "EM102", "S306", "PT017", "ARG001", "S310"]
"ros2_ws/**" = ["N802", "ANN", "ARG002", "PLC0415", "TRY003", "EM101", "EM102", "PLR0913"]
"simulation/webots_controller.py" = ["PLC0415", "N802"]
"simulation/webots_stubs.py" = ["N802", "D", "TC003"]
"simulation/webots_runtime.py" = []
"simulation/runtime.py" = []
"simulation/proof.py" = []
"core/bridge.py" = ["S603"]
"simulation/export.py" = ["ANN401"]
"core/mqtt_stubs.pyi" = ["N802"]
"core/consensus.py" = ["C901", "PLR0913", "S101", "PLR2004"]
"core/mesh.py" = ["PLR0913", "ARG002", "FBT003", "S104"]
"main.py" = ["PLR0913", "TRY003", "EM101", "PLW0603", "C901", "PLR0915", "ANN401"]
"auction/voronoi.py" = ["C901"]
"dashboard/tui_monitor.py" = ["S310", "C901", "PLR0915"]
"scripts/build_frontend.py" = ["S603", "RUF001"]
"scripts/run_foxmq_cluster.py" = ["S603", "PLR0913"]
"scripts/run_local_peers.py" = ["S603", "C901", "PLR0912", "PLR0915"]
"scripts/serve_live_runtime.py" = ["C901", "PLR0915", "A002", "ARG002", "PLW0603", "ANN401", "BLE001", "LOG015"]
"scripts/setup_foxmq.py" = ["S603", "PLR0913"]
"scripts/demo_vertex_handshake.py" = ["T201", "C901", "D", "S311", "TRY003", "EM101", "EM102", "PLR0913"]
"scripts/verify_poc.py" = ["T201", "EXE001", "D"]
"simulation/claim_manager.py" = ["C901", "PLR0913"]
"simulation/mesh_handler.py" = ["PLR0913"]
"simulation/protocol.py" = ["PLR0913", "S101"]
"simulation/stub.py" = ["RUF001", "C901", "PLR2004"]
"viz/heatmap.py" = ["PLR0913"]
"failure/network_injector.py" = ["S311"]
"ros2_ws/src/entropy_hunt_ros2/launch/demo.launch.py" = ["N999"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["core", "auction", "failure", "roles", "viz", "simulation", "scripts", "dashboard"]

[tool.mypy]
python_version = "3.12"
files = ["auction", "core", "failure", "roles", "scripts", "simulation", "viz", "main.py", "tests", "tests_ros"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
explicit_package_bases = true
mypy_path = ["ros2_ws/src/entropy_hunt_ros2"]

[[tool.mypy.overrides]]
module = [
    "ros2_ws.src.entropy_hunt_ros2.entropy_hunt_ros2.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "entropy_hunt_interfaces",
    "entropy_hunt_interfaces.*",
    "launch",
    "launch.*",
    "launch_ros",
    "launch_ros.*",
    "rclpy",
    "rclpy.*",
    "setuptools",
    "setuptools.*",
]
ignore_missing_imports = true
