cmake_minimum_required(VERSION 3.8)
project(entropy_hunt_interfaces)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(std_msgs REQUIRED)

set(msg_files
  "msg/Assignment.msg"
  "msg/BftRoundResult.msg"
  "msg/CertaintyUpdate.msg"
  "msg/Claim.msg"
  "msg/DroneState.msg"
  "msg/Heartbeat.msg"
  "msg/RuntimeControl.msg"
  "msg/SurvivorFound.msg"
)

rosidl_generate_interfaces(${PROJECT_NAME}
  ${msg_files}
  DEPENDENCIES std_msgs
)

ament_export_dependencies(rosidl_default_runtime)
ament_package()
