<?xml version="1.0"?>
<package format="3">
  <name>entropy_hunt_interfaces</name>
  <version>0.1.0</version>
  <description>ROS 2 message contracts for Entropy Hunt.</description>
  <maintainer email="maintainers@example.com">Entropy Hunt</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
